# vogl

./: .gitignore  CMakeLists.txt  README.md
samples/OGLSamples_GTruc/samples/: gl-320-fbo-blit.cpp  gl-330-blend-rtt.cpp
samples/gltests/: CMakeLists.txt
samples/gltests/benchmark_sphere/: CMakeLists.txt
src/extlib/pxfmt/: CMakeLists.txt  pxfmt.cpp  pxfmt.h  pxfmt_case_statements.inl  pxfmt_etc.cpp  pxfmt_fxt1.cpp  pxfmt_fxt1.h  pxfmt_internal.cpp  pxfmt_internal.h  pxfmt_s3tc.cpp  pxfmt_s3tc.h
src/extlib/texcompress/: CMakeLists.txt  mtypes.h
src/extlib/texcompress/glapi/: glapi.h
src/ktxtool/: CMakeLists.txt  ktxtool.cpp
src/voglcommon/: vogl_default_framebuffer_state.cpp  vogl_general_context_state.cpp  vogl_gl_utils.cpp  vogl_matrix_state.cpp
src/voglcore/: vogl_mipmapped_texture.cpp
src/vogleditor/: vogleditor_statetreecontextgeneralitem.cpp
src/vogltrace/: libvogltrace_linker_script.txt
tests/: run_tests.cpp  run_tests.sh  tests.json
tests/traces/: gl-300-fbo-multisample32.trace  gl-300-test-alpha32.trace  gl-320-buffer-uniform-shared32.trace  gl-320-buffer-uniform32.trace  gl-320-buffer-update32.trace  gl-320-draw-base-vertex32.trace  gl-320-draw-image-space32.trace  gl-320-draw-instanced32.trace  gl-320-draw-multiple32.trace  gl-320-draw-without-vertex-attrib32.trace  gl-320-fbo-blit32.trace  gl-320-fbo-depth-multisample32.trace  gl-320-fbo-depth32.trace  gl-320-fbo-layered32.trace  gl-320-fbo-multisample32.trace  gl-320-fbo-rtt-texture-array32.trace  gl-320-fbo-rtt32.trace  gl-320-fbo-shadow32.trace  gl-320-fbo-srgb32.trace  gl-320-fbo32.trace  gl-320-glsl-builtin-blocks32.trace  gl-320-glsl-discard32.trace  gl-320-glsl-precision32.trace  gl-320-primitive-front-face32.trace  gl-320-primitive-point32.trace  gl-320-primitive-shading32.trace  gl-320-primitive-sprite32.trace  gl-320-query-conditional32.trace  gl-320-query-occlusion32.trace  gl-320-sync32.trace  gl-320-test-scissor32.trace  gl-320-texture-2d32.trace  gl-320-texture-3d32.trace  gl-320-texture-buffer32.trace  gl-320-texture-compressed-ext32.trace  gl-320-texture-cube32.trace  gl-320-texture-fetch32.trace  gl-320-texture-format32.trace  gl-320-texture-integer32.trace  gl-320-texture-offset32.trace  (+17 more)
